--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build && node .storybook/copy-ic-assets.mjs",
+    "build-storybook:ic": "npm run build-storybook"
   },
   "dependencies": {
     "@dfinity/agent": "^2.4.1",
@@ -19,8 +20,16 @@
     "@dfinity/ledger-icp": "^3.0.0",
     "@dfinity/principal": "^2.4.1",
     "@dfinity/utils": "^2.13.1",
+    "@metaplex-foundation/js": "^0.20.1",
+    "@metaplex-foundation/mpl-token-metadata": "^3.3.0",
     "@nfid/identitykit": "^1.0.14",
     "@radix-ui/react-slot": "^1.2.2",
+    "@solana/spl-token": "^0.4.12",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.95.8",
     "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.76.0",
     "@tanstack/react-router": "^1.120.3",
@@ -56,6 +65,7 @@
     "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitest/browser": "^3.1.3",
     "@vitest/coverage-v8": "^3.1.3",
+    "buffer": "^6.0.3",
     "eslint": "^9.26.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
